# TicTacToe-hs

./: LICENSE  README.md  TicTacToe.cabal
app/: Main.hs
src/: Lib.hs
src/AI/: AlphaBeta.hs  Heuristic.hs  Minimax.hs
src/Game/: Board.hs  Piece.hs  Player.hs  Utils.hs
