name:                TicTacToe
version:             0.1.0.0
synopsis:            TicTacToe-playing AI
description:         Please see README.md
homepage:            https://github.com/caneroj1/TicTacToe-hs
license:             BSD3
license-file:        LICENSE
author:              jcanero
maintainer:          caneroj1@tcnj.edu
copyright:           2016 jcanero
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Game.Piece
                     , Game.Board
                     , Game.Player
                     , AI.Minimax
  build-depends:       base >= 4.7 && < 5
                     , text
                     , split
  default-language:    Haskell2010

executable TicTacToe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TicTacToe
                     , text
                     , haskeline
                     , random
  default-language:    Haskell2010

test-suite TicTacToe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TicTacToe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TicTacToe
